features/media-stack/bazarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: bazarr
    security: lscr
    storage: media-stack
  name: bazarr
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: bazarr
  template:
    metadata:
      labels:
        app: bazarr
    spec:
      containers:
      - image: lscr.io/linuxserver/bazarr:1.5.6@sha256:94eee5e3e14430b7b144d4556be73963a7daf6f1bddc25586627f426465482ce
        name: bazarr
        ports:
        - name: http
          containerPort: 6767
        volumeMounts:
        - name: configdir
          mountPath: /config
      volumes:
      - name: configdir
        persistentVolumeClaim:
          claimName: bazarr-config-pvc
