features/media-stack/prowlarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: prowlarr
    security: lscr
  name: prowlarr
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      containers:
      - image: lscr.io/linuxserver/prowlarr:2.3.0@sha256:a8fe7b9c502f979146b6d0f22438b825c38e068241bb8a708c473062dffdbb03
        name: prowlarr
        ports:
        - name: http
          containerPort: 9696
        volumeMounts:
        - name: configdir
          mountPath: /config
      volumes:
      - name: configdir
        persistentVolumeClaim:
          claimName: prowlarr-config-pvc
