features/media-stack/radarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: radarr
    storage: media-stack
    security: lscr
  name: radarr
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      containers:
      - image: lscr.io/linuxserver/radarr:6.0.4@sha256:ca43905eaf2dd11425efdcfe184892e43806b1ae0a830440c825cecbc2629cfb
        name: radarr
        ports:
        - name: http
          containerPort: 7878
        volumeMounts:
        - name: configdir
          mountPath: /config
      volumes:
      - name: configdir
        persistentVolumeClaim:
          claimName: radarr-config-pvc
